[gd_scene load_steps=4 format=3 uid="uid://d3dh8rbooqkqf"]

[ext_resource type="Script" uid="uid://cpeyhet2j7ity" path="res://battle/ui/all_ships/all_ship_ui.gd" id="1_bk4a8"]
[ext_resource type="PackedScene" uid="uid://n6603kum20tr" path="res://battle/ui/selected_ship/ship_healthbar.tscn" id="1_qxdw2"]
[ext_resource type="PackedScene" uid="uid://nrsd6o083pm0" path="res://battle/ui/selected_ship/ship_shield_healthbar.tscn" id="3_k4haw"]

[node name="AllShipUI" type="Node2D"]
script = ExtResource("1_bk4a8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 35.0
offset_right = 32.0
offset_bottom = 75.0
grow_horizontal = 2

[node name="ShipHealthbar" parent="VBoxContainer" instance=ExtResource("1_qxdw2")]
layout_mode = 2

[node name="ShieldHealthbar" parent="VBoxContainer" instance=ExtResource("3_k4haw")]
layout_mode = 2
